--- a/popup.html
+++ b/popup.html
@@ -45,6 +45,9 @@
             </div>
           </div>
           <div class="n-like-inline-block">
+            <!-- 该动态已删除 -->
+            <div class="n-like-no-link"
+                 v-if="item.referenceItem.status === 'DELETED'"></div>
             <!-- 动态 - 有图 -->
             <a class="n-like-post"
                v-if="item.referenceItem.referenceImageUrl"
@@ -81,6 +84,9 @@
             </div>
           </div>
           <div class="n-like-inline-block">
+            <!-- 该动态已删除 -->
+            <div class="n-like-no-link"
+                 v-if="item.referenceItem.status === 'DELETED'"></div>
             <a class="n-like-post"
                v-if="item.type === 'LIKE_PERSONAL_UPDATE_COMMENT' || item.type === 'LIKE_COMMENT'"
                :href="'https://web.okjike.com/' + (item.referenceItem.targetType === 'OFFICIAL_MESSAGE' ? 'message-detail/' : 'post-detail/') + item.referenceItem.targetId + '/' + (item.referenceItem.targetType === 'ORIGINAL_POST' ? 'originalPost' : item.referenceItem.targetType === 'OFFICIAL_MESSAGE' ? 'officialMessage' : item.referenceItem.targetType)"
@@ -112,6 +118,9 @@
             </div>
           </div>
           <div class="n-like-inline-block">
+            <!-- 该动态已删除 -->
+            <div class="n-like-no-link"
+                 v-if="item.referenceItem.status === 'DELETED'"></div>
             <a class="n-like-post">
               <span v-if="!item.referenceItem.referenceImageUrl"
                     v-html="item.referenceItem.content.replace(/\n/g, '<br/>')"></span>
@@ -135,6 +144,9 @@
             </div>
           </div>
           <div class="n-like-inline-block">
+            <!-- 该动态已删除 -->
+            <div class="n-like-no-link"
+                 v-if="item.referenceItem.status === 'DELETED'"></div>
             <a class="n-like-post">
               <span v-if="!item.referenceItem.referenceImageUrl"
                     v-html="item.referenceItem.content.replace(/\n/g, '<br/>')"></span>
@@ -157,6 +169,9 @@
             </p>
           </div>
           <div class="n-like-inline-block">
+            <!-- 该动态已删除 -->
+            <div class="n-like-no-link"
+                 v-if="item.referenceItem.status === 'DELETED'"></div>
             <!-- 动态 - 有图 -->
             <a class="n-repost-post"
                v-if="item.referenceItem.referenceImageUrl"
@@ -192,6 +207,9 @@
             </p>
           </div>
           <div class="n-like-inline-block">
+            <!-- 该动态已删除 -->
+            <div class="n-like-no-link"
+                 v-if="item.referenceItem.status === 'DELETED'"></div>
             <!-- 动态 - 有图 -->
             <a class="n-comment-post"
                v-if="item.referenceItem.referenceImageUrl"
@@ -229,6 +247,9 @@
             </p>
           </div>
           <div class="n-like-inline-block">
+            <!-- 该动态已删除 -->
+            <div class="n-like-no-link"
+                 v-if="item.referenceItem.status === 'DELETED'"></div>
             <!-- 动态 - 有图 -->
             <a class="n-comment-post"
                v-if="item.referenceItem.referenceImageUrl && item.type !== 'REPLIED_TO_ANSWER_COMMENT'"
@@ -275,6 +296,9 @@
             </p>
           </div>
           <div class="n-like-inline-block">
+            <!-- 该动态已删除 -->
+            <div class="n-like-no-link"
+                 v-if="item.referenceItem.status === 'DELETED'"></div>
             <!-- 动态 - 有图 -->
             <a class="n-comment-post"
                v-if="item.referenceItem.referenceImageUrl"
@@ -306,6 +330,9 @@
             </p>
           </div>
           <div class="n-like-inline-block">
+            <!-- 该动态已删除 -->
+            <div class="n-like-no-link"
+                 v-if="item.referenceItem.status === 'DELETED'"></div>
             <!-- 动态 - 有图 -->
             <a class="n-comment-post"
                v-if="item.referenceItem.referenceImageUrl"
