--- a/popup.html
+++ b/popup.html
@@ -364,7 +364,13 @@
             <p class="n-comment-users-comment">{{ item.actionItem.users[0].briefIntro }}</p>
           </div>
           <div class="n-like-inline-block">
-            <a class="n-comment-post"></a>
+            <button class="n-comment-follow"
+                    v-if="!item.actionItem.users[0].following"
+                    @click.self.stop="followUser(item)">关注</button>
+            <button class="n-comment-follow"
+                    v-else
+                    style="background-color: #ccc;"
+                    @click.self.stop="unfollowUser(item)">已关注</button>
           </div>
         </div>
         <!-- 未知消息类型 -->
