fixed: 修复用户没有收到过任何通知时的报错问题

--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,7 @@
     </div>
     <!-- 通知列表 -->
     <div id="notification"
+         :class="{ empty: notifications.length <= 0 && isNotificationLoading === false }"
          @scroll.passive="notificationScrolling()"
          v-if="authToken && refreshToken && accessToken && notifications && isUIEnabled">
       <div class="n-item"
